Fix Bug 427697 - KMail did not apply data from mailto information.

BUG: 427697
FIXED-IN: 5.15.3